# PathTracer

./: .clang-format  .gitignore  CMakeLists.txt
cpu/: .clang-format  CMakeLists.txt
cpu/images/: moving.ppm  test.ppm
cpu/renders/: diff_light.ppm
cpu/src/: all_includes.cxx  all_includes.h  main.cxx
cpu/src/acceleration/bvh/: aabb.h  bvh.h
cpu/src/core/: camera.h  ray.h
cpu/src/hittable/: constant_medium.h  hittable.h  hittable_list.h  quad.h  sphere.h  transform.h
cpu/src/materials/: dielectric.h  isotropic.h  lambertian.h  material.h  metal.h
cpu/src/materials/lights/: diffuse_light.h
cpu/src/materials/textures/: checker.h  image.h  noise_texture.h  solid_color.h  texture.h
cpu/src/math/: color.h
cpu/src/math/noise/: perlin.h
cpu/src/scenes/: scene.h
cpu/src/util/: constants.h  interval.h  random_util.h  rtweekend.h
gpu/pathtracing/: cudart.exp  cudart.lib  main.cu  pathtracing.sln  pathtracing.vcxproj
gpu/pathtracing/pathtracing/x64/Debug/: File.cu-1237581625.deps  File.cu.cache  kernel.cu-1725495582.deps  kernel.cu.cache  main.cu-1684356766.deps  main.cu.cache  pathtracing.exe.recipe  pathtracing.ilk
gpu/pathtracing/pathtracing/x64/Debug/pathtracing.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pathtracing.lastbuildstate
gpu/pathtracing/pathtracing/x64/Release/: main.cu.cache  pathtracing.exe.recipe
gpu/pathtracing/pathtracing/x64/Release/pathtracing.tlog/: CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pathtracing.lastbuildstate
gpu/pathtracing/x64/Debug/: pathtracing.exp
gpu/pathtracing/x64/Release/: pathtracing.exp  pathtracing.lib
src/: all_includes.cxx  main.cxx
src/core/: camera.h
src/hittable/: hittable.h  hittable_list.h  sphere.h
src/materials/: dielectric.h  lambertian.h  metal.h
src/math/: color.h  vec3.h
src/scenes/: scene.h
src/util/: constants.h  interval.h  random_util.h  rtweekend.h
